libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/access-3.jsonc
//@ run: fail
//@ description: access/3 should not compile
[
  "::kernel::special_form::access",
  "x",
  "y",
  "z"
  //~^ ERROR Remove this argument
]
